# Dareman

./: .clang-format  CMakeLists.txt  GenerateVisualStudioProject.bat  Readme.md  TestReviewInstructions.md  run_clang_format.bat
Code/: Dareman.cpp  Dareman.h  GameActor.cpp  GameActor.h  GameStateMgr.cpp  GameStateMgr.h  GameUI.cpp  GameUI.h  Ghost.cpp  Ghost.h  Level.cpp  Level.h  Main.cpp  PlayerInputMgr.cpp  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  SpriteManager.cpp  SpriteManager.h
Code/GameEngine/: CollisionMgr.cpp  CollisionMgr.h  GameEngine.cpp  GameEngine.h  GameStateMgr.cpp  GameStateMgr.h  Level.cpp  Level.h  PlayerInputMgr.cpp  PlayerInputMgr.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  SpriteManager.cpp  SpriteManager.h  SpriteSheet.cpp  SpriteSheet.h
Code/UI/: GameUI.cpp  GameUI.h  Modal.cpp  Modal.h
Data/Level/: Level.txt  Pickups.txt
